demonstrate "no such class: java.lang.System.out" with attach API